--- a/assets/addProduct.html
+++ b/assets/addProduct.html
@@ -19,44 +19,44 @@
       <img src="images/bt-close.png" alt="Close Menu" width="24" height="24" />
     </a>
   </div>
-  <a href="dashboard.html"><img src="images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
+  <a href="{{URL}}"><img src="images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
   <div>
     <ul>
       <li><a href="categories.html" class="link-menu">Categorias</a></li>
-      <li><a href="products.html" class="link-menu">Produtos</a></li>
+      <li><a href="{{URL}}/products" class="link-menu">Produtos</a></li>
     </ul>
   </div>
 </amp-sidebar>
 <header>
   <div class="go-menu">
     <a on="tap:sidebar.toggle">☰</a>
-    <a href="dashboard.html" class="link-logo"><img src="images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
+    <a href="{{URL}}" class="link-logo"><img src="images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
   </div>
   <div class="right-box">
     <span class="go-title">Administration Panel</span>
-  </div>    
-</header>  
+  </div>
+</header>
 <!-- Header -->
   <!-- Main Content -->
   <main class="content">
     <h1 class="title new-item">New Product</h1>
-    
+
     <form>
       <div class="input-field">
         <label for="sku" class="label">Product SKU</label>
-        <input type="text" id="sku" class="input-text" /> 
+        <input type="text" id="sku" class="input-text" />
       </div>
       <div class="input-field">
         <label for="name" class="label">Product Name</label>
-        <input type="text" id="name" class="input-text" /> 
+        <input type="text" id="name" class="input-text" />
       </div>
       <div class="input-field">
         <label for="price" class="label">Price</label>
-        <input type="text" id="price" class="input-text" /> 
+        <input type="text" id="price" class="input-text" />
       </div>
       <div class="input-field">
         <label for="quantity" class="label">Quantity</label>
-        <input type="text" id="quantity" class="input-text" /> 
+        <input type="text" id="quantity" class="input-text" />
       </div>
       <div class="input-field">
         <label for="category" class="label">Categories</label>
@@ -72,10 +72,10 @@
         <textarea id="description" class="input-text"></textarea>
       </div>
       <div class="actions-form">
-        <a href="products.html" class="action back">Back</a>
+        <a href="{{URL}}/products" class="action back">Back</a>
         <input class="btn-submit btn-action" type="submit" value="Save Product" />
       </div>
-      
+
     </form>
   </main>
   <!-- Main Content -->
