--- a/assets/dashboard.html
+++ b/assets/dashboard.html
@@ -19,18 +19,18 @@
       <img src="assets/images/bt-close.png" alt="Close Menu" width="24" height="24" />
     </a>
   </div>
-  <a href="assets/dashboard.html"><img src="assets/images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
+  <a href="{{URL}}"><img src="assets/images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
   <div>
     <ul>
       <li><a href="assets/categories.html" class="link-menu">Categorias</a></li>
-      <li><a href="assets/products.html" class="link-menu">Produtos</a></li>
+      <li><a href="{{URL}}/products" class="link-menu">Produtos</a></li>
     </ul>
   </div>
 </amp-sidebar>
 <header>
   <div class="go-menu">
     <a on="tap:sidebar.toggle">☰</a>
-    <a href="assets/dashboard.html" class="link-logo"><img src="assets/images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
+    <a href="{{URL}}" class="link-logo"><img src="assets/images/go-logo.png" alt="Welcome" width="69" height="430" /></a>
   </div>
   <div class="right-box">
     <span class="go-title">Administration Panel</span>
