--- a/assets/dashboard.html
+++ b/assets/dashboard.html
@@ -22,7 +22,7 @@
   <a href="{{URL}}"><img src="assets/images/menu-go-jumpers.png" alt="Welcome" width="200" height="43" /></a>
   <div>
     <ul>
-      <li><a href="assets/categories.html" class="link-menu">Categorias</a></li>
+      <li><a href="{{URL}}/categories" class="link-menu">Categorias</a></li>
       <li><a href="{{URL}}/products" class="link-menu">Produtos</a></li>
     </ul>
   </div>
