--- a/assets/addCategory.html
+++ b/assets/addCategory.html
@@ -40,7 +40,7 @@
   <main class="content">
     <h1 class="title new-item">New Category</h1>
 
-    <form>
+    <form method='post'>
       <div class="input-field">
         <label for="category-name" class="label">Category Name</label>
         <input type="text" id="category-name" class="input-text" />
