--- a/assets/addProduct.html
+++ b/assets/addProduct.html
@@ -41,26 +41,26 @@
   <main class="content">
     <h1 class="title new-item">New Product</h1>
 
-    <form>
+    <form method='post'>
       <div class="input-field">
         <label for="sku" class="label">Product SKU</label>
-        <input type="text" id="sku" class="input-text" />
+        <input type="text" id="sku" class="input-text" required/>
       </div>
       <div class="input-field">
         <label for="name" class="label">Product Name</label>
-        <input type="text" id="name" class="input-text" />
+        <input type="text" id="name" class="input-text" required/>
       </div>
       <div class="input-field">
         <label for="price" class="label">Price</label>
-        <input type="text" id="price" class="input-text" />
+        <input type="text" id="price" class="input-text" required/>
       </div>
       <div class="input-field">
         <label for="quantity" class="label">Quantity</label>
-        <input type="text" id="quantity" class="input-text" />
+        <input type="text" id="quantity" class="input-text" required/>
       </div>
       <div class="input-field">
         <label for="category" class="label">Categories</label>
-        <select multiple id="category" class="input-text">
+        <select multiple id="category" class="input-text" required>
           <option>Category 1</option>
           <option>Category 2</option>
           <option>Category 3</option>
@@ -69,7 +69,7 @@
       </div>
       <div class="input-field">
         <label for="description" class="label">Description</label>
-        <textarea id="description" class="input-text"></textarea>
+        <textarea id="description" class="input-text" required></textarea>
       </div>
       <div class="actions-form">
         <a href="{{URL}}/products" class="action back">Back</a>
