--- a/assets/dashboard.html
+++ b/assets/dashboard.html
@@ -43,7 +43,7 @@
       <h1 class="title">Dashboard</h1>
     </div>
     <div class="infor">
-      You have 4 products added on this store: <a href="assets/addProduct.html" class="btn-action">Add new Product</a>
+      You have 4 products added on this store: <a href="{{URL}}/addProduct" class="btn-action">Add new Product</a>
     </div>
     <ul class="product-list">
       <li>
