--- a/assets/products.html
+++ b/assets/products.html
@@ -41,7 +41,7 @@
   <main class="content">
     <div class="header-list-page">
       <h1 class="title">Products</h1>
-      <a href="assets/addProduct.html" class="btn-action">Add new Product</a>
+      <a href="{{URL}}/addProduct" class="btn-action">Add new Product</a>
     </div>
     <table class="data-grid">
       <tr class="data-row">
