Implementado Adicionar/Ler Categorias e Produtos. Falta Edit e Delete

--- a/assets/addCategory.html
+++ b/assets/addCategory.html
@@ -43,12 +43,12 @@
     <form method='post'>
       <div class="input-field">
         <label for="category-name" class="label">Category Name</label>
-        <input type="text" id="category-name" class="input-text" />
+        <input type="text" id="category-name" class="input-text" name="name"/>
 
       </div>
       <div class="input-field">
         <label for="category-code" class="label">Category Code</label>
-        <input type="text" id="category-code" class="input-text" />
+        <input type="text" id="category-code" class="input-text" name="code"/>
 
       </div>
       <div class="actions-form">
