Categorias dinâmicas em addProduct.

--- a/assets/addProduct.html
+++ b/assets/addProduct.html
@@ -61,10 +61,7 @@
       <div class="input-field">
         <label for="category" class="label">Categories</label>
         <select multiple id="category" class="input-text" name="categories[]" required>
-          <option value="Category 1">Category 1</option>
-          <option value="Category 2">Category 2</option>
-          <option value="Category 3">Category 3</option>
-          <option value="Category 4">Category 4</option>
+          {{categories}}
         </select>
       </div>
       <div class="input-field">
