Editar Produtos OK, Método de Redirect adicionado no Router

--- a/assets/products/item.html
+++ b/assets/products/item.html
@@ -20,9 +20,11 @@
   </td>
 
   <td class="data-grid-td">
-    <div class="actions">
-      <div class="action edit"><span>Edit</span></div>
-      <div class="action delete"><span>Delete</span></div>
-    </div>
+        <a href="{{URL}}/products/{{id}}/edit">
+          <button type="button" class="btn-action">Edit</button>
+        </a>
+        <a href="{{URL}}/products/{{id}}/delete">
+          <button type="button" class="btn-action">Delete</button>
+        </a>
   </td>
 </tr>
