--- a/assets/addProduct.html
+++ b/assets/addProduct.html
@@ -1,8 +1,7 @@
-
 <!doctype html>
 <html ⚡>
 <head>
-  <title>Webjump | Backend Test | Add Product</title>
+  <title>Webjump | Backend Test | Add Category</title>
   <meta charset="utf-8">
 
 <link  rel="stylesheet" type="text/css"  media="all" href="assets/css/style.css" />
@@ -12,7 +11,7 @@
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async custom-element="amp-fit-text" src="https://cdn.ampproject.org/v0/amp-fit-text-0.1.js"></script>
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script></head>
-  <!-- Header -->
+<!-- Header -->
 <amp-sidebar id="sidebar" class="sample-sidebar" layout="nodisplay" side="left">
   <div class="close-menu">
     <a on="tap:sidebar.toggle">
@@ -37,54 +36,56 @@
   </div>
 </header>
 <!-- Header -->
-  <!-- Main Content -->
-  <main class="content">
-    <h1 class="title new-item">New Product</h1>
+<!-- Main Content -->
+<main class="content">
+  <h1 class="title new-item">New Product</h1>
 
-    <form method='post'>
-      <div class="input-field">
-        <label for="sku" class="label">Product SKU</label>
-        <input type="text" id="sku" class="input-text" name="sku" required/>
-      </div>
-      <div class="input-field">
-        <label for="name" class="label">Product Name</label>
-        <input type="text" id="name" class="input-text" name="name" required/>
-      </div>
-      <div class="input-field">
-        <label for="price" class="label">Price</label>
-        <input type="text" id="price" class="input-text" name="price" required/>
-      </div>
-      <div class="input-field">
-        <label for="quantity" class="label">Quantity</label>
-        <input type="text" id="quantity" class="input-text" name="quantity" required/>
-      </div>
-      <div class="input-field">
-        <label for="category" class="label">Categories</label>
-        <select multiple id="category" class="input-text" name="categories[]" required>
-          {{categories}}
-        </select>
-      </div>
-      <div class="input-field">
-        <label for="description" class="label">Description</label>
-        <textarea id="description" class="input-text" name="description" required></textarea>
-      </div>
-      <div class="actions-form">
-        <a href="{{URL}}/products" class="action back">Back</a>
-        <input class="btn-submit btn-action" type="submit" value="Save Product" />
-      </div>
+  <form method='post'>
+    <div class="input-field">
+      <label for="sku" class="label">Product SKU</label>
+      <input type="text" id="sku" class="input-text" name="sku" required />
+    </div>
+    <div class="input-field">
+      <label for="name" class="label">Product Name</label>
+      <input type="text" id="name" class="input-text" name="name" required />
+    </div>
+    <div class="input-field">
+      <label for="price" class="label">Price</label>
+      <input type="text" id="price" class="input-text" name="price" required />
+    </div>
+    <div class="input-field">
+      <label for="quantity" class="label">Quantity</label>
+      <input type="text" id="quantity" class="input-text" name="quantity" required />
+    </div>
+    <div class="input-field">
+      <label for="category" class="label">Categories</label>
+      <select multiple id="category" class="input-text" name="categories[]" required>
+        {{categories}}
+      </select>
+    </div>
+    <div class="input-field">
+      <label for="description" class="label">Description</label>
+      <textarea id="description" class="input-text" name="description" required></textarea>
+    </div>
+    <div class="actions-form">
+      <a href="{{URL}}/products" class="action back">Back</a>
+      <input class="btn-submit btn-action" type="submit" value="Save Product" />
+    </div>
 
-    </form>
-  </main>
-  <!-- Main Content -->
+  </form>
+</main>
+<!-- Main Content -->
 
-  <!-- Footer -->
+<!-- Footer -->
 <footer>
-	<div class="footer-image">
-	  <img src="assets/images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
-	</div>
-	<div class="email-content">
-	  <span>go@jumpers.com.br</span>
-	</div>
+  <div class="footer-image">
+    <img src="assets/images/go-jumpers.png" width="119" height="26" alt="Go Jumpers" />
+  </div>
+  <div class="email-content">
+    <span>go@jumpers.com.br</span>
+  </div>
 </footer>
- <!-- Footer --></body>
+<!-- Footer -->
+</body>
+
 </html>
