--- a/assets/products/item.html
+++ b/assets/products/item.html
@@ -26,5 +26,8 @@
         <a href="{{URL}}/products/{{id}}/delete">
           <button type="button" class="btn-action">Delete</button>
         </a>
+        <a href="{{URL}}/products/{{id}}/upload">
+          <button type="button" class="btn-action">Upload Image</button>
+        </a>
   </td>
 </tr>
