--- a/assets/uploadProductImage.html
+++ b/assets/uploadProductImage.html
@@ -39,12 +39,13 @@
   <!-- Main Content -->
   <main class="content">
     <div class="header-list-page">
-      <h1 class="title">Are you sure you want to delete this category?</h1>
+      <h1 class="title">Upload Image</h1>
     </div>
-    <form method='post'>
+    <form method="POST" enctype="multipart/form-data">
       <div class="actions-form">
-        <a href="{{URL}}/categories" class="action back">Back</a>
-        <input class="btn-submit btn-action" type="submit" value="Delete Product" />
+        <a href="{{URL}}/products" class="action back">Back</a>
+        <p><input type="file" name="image" accept="image/*" required /></p>
+        <input type="submit" name="submit" class="btn-submit btn-action" value="Upload Image" />
       </div>
     </form>
   </main>
