Upload de Imagens finalizado, projeto finalizado.

--- a/assets/dashboard/item.html
+++ b/assets/dashboard/item.html
@@ -1,6 +1,6 @@
 <li>
   <div class="product-image">
-    <img src="assets/images/product/tenis-runner-bolt.png" layout="responsive" width="164" height="145" alt="Tênis Runner Bolt" />
+    <img src="assets/images/product/{{id}}.jpeg" layout="responsive" width="164" height="145" alt="{{id}}" />
   </div>
   <div class="product-info">
     <div class="product-name"><span>{{name}}</span></div>
